gobmkida/g2/store_persistent_reading_cache
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/store_persistent_reading_cache/src/engine/persistent.c:954:4: error: use of undeclared identifier 'byte_A12ADF'
|| byte_A12ADF[v31] != 3 && v32[19] == 1 
   ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/store_persistent_reading_cache/src/obj/1/persistent.o] Error 1
